# autoresearch-cpu

./: README.md  plan-cpu.md  prepare.py  program.md  pyproject.toml  train.py
.github/workflows/: intel-mac-cpu-smoke.yml
docs/: intel-mac-cpu-results.md
tests/: test_train_compat.py
