[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy==1.26.4; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy>=2.2.6; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch==2.9.1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]
